# creak

./: CHANGELOG.md  Cargo.toml  README.md
examples/: creak.rs  decode_wav.rs  dump_raw.rs
samples/: sine_1k_44100.flac  sine_1k_i24.raw
src/: decoder.rs  lib.rs
src/decoder/: flac.rs  mod.rs  mp3.rs  raw.rs  vorbis.rs  wav.rs
src/tools/: creak-reader.rs
