[package]
name = "creak"
version = "0.2.0"
description = "Lightweight audio decoder. Converts popular formats to raw 32-bit float samples."
authors = ["Nicholas Fleck <TheBerkin@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/TheBerkin/creak"
repository = "https://github.com/TheBerkin/creak"
keywords = ["audio", "decoder", "sound"]
categories = ["multimedia::audio", "multimedia::encoding", "encoding", "filesystem"]
readme = "README.md"
exclude = [
    "*.wav",
    "*.flac",
    "*.mp3",
    "*.ogg",
    "*.raw"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1

[features]
default = ["wav", "mp3", "vorbis", "flac"]
wav = ["hound"]
mp3 = ["minimp3"]
vorbis = ["lewton"]
flac = ["claxon"]

[dependencies]
hound = { version = "3.4.0", optional = true }
minimp3 = { version = "0.5.0", optional = true }
lewton = { version = "0.10.1", optional = true }
claxon = { version = "0.4.3", optional = true }
